controller/4_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    boundary.org/app: boundary
    tier: security
  name: boundary
  namespace: boundary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boundary
      tier: security
  strategy: {}
  template:
    metadata:
      labels:
        app: boundary
        tier: security
    spec:
      hostname: boundary
      subdomain: boundary-controller
      serviceAccountName: boundary-sa
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: topology.kubernetes.io/zone
            labelSelector:
              matchExpressions:
              - key: tier
                operator: In
                values:
                - database
      containers:
      - image: hashicorp/boundary:0.17.0
        name: boundary
        # lifecycle:
        #   postStart:
        #     exec:
        #       command:
        #       - /bin/sh
        #       - -c
        #       - boundary server -config /boundary/boundary.hcl
        command:
        - /bin/sh
        - -c
        - boundary server -config /boundary/boundary.hcl; sleep 3; boundary scopes create -name 'Main' -scope-id 'global' -recovery-config /boundary/boundary.hcl -skip-admin-role-creation -skip-default-role-creation
        # args:
        # - "server"
        # - "-config"
        # - "/boundary/boundary.hcl"
        livenessProbe:
          httpGet:
            port: 9200
            path: "/"
        readinessProbe:
          httpGet:
            port: 9200
            path: "/"
        resources:
          requests:
            cpu: 250m
            memory: 250Mi
          limits:
            cpu: 2000m
            memory: 2000Mi
        ports:
        - name: api
          containerPort: 9200
        - name: cluster
          containerPort: 9201
        - name: data
          containerPort: 9202
        volumeMounts:
        - mountPath: /boundary
          name: boundary-config
          readOnly: true
        - mountPath: /var/log/boundary
          name: boundary-log
          readOnly: false
      # - image: hashicorp/boundary:0.17.0
      #   name: boundary-init-users
      #   command:
      #   - /bin/sh
      #   - -c
      #   - boundary scopes create -name 'Main' -scope-id 'global' -recovery-config /boundary/boundary.hcl -skip-admin-role-creation -skip-default-role-creation
      #   # readinessProbe:
      #   #   exec:
      #   #     command:
      #   #     - /bin/sh
      #   #     - -c
      #   #     - curl
      #   resources:
      #     requests:
      #       cpu: 250m
      #       memory: 250Mi
      #     limits:
      #       cpu: 2000m
      #       memory: 2000Mi
      #   env:
      #   - name: BOUNDARY_PG_URL
      #     valueFrom:
      #       secretKeyRef:
      #         name: postgres-secret
      #         key: db-url
      #   - name: HOSTNAME
      #     value: "boundary"
      #   volumeMounts:
      #   - mountPath: /boundary
      #     name: boundary-config
      #     readOnly: true
      volumes:
      - name: boundary-config
        configMap:
          name: boundary-config
      - name: boundary-log
        persistentVolumeClaim:
          claimName: boundary-log-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: boundary-controller
  namespace: boundary
  labels:
    app: boundary
    tier: security
spec:
  selector:
    app: boundary
    tier: security
  ports:
  - port: 9200
    targetPort: 9200
    name: api
  - port: 9201
    targetPort: 9201
    name: cluster
  - port: 9202
    targetPort: 9202
    name: data
  type: ClusterIP
