controller/6_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boundary-ingress
  namespace: boundary
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: boundary-controller
            port:
              number: 9200
